formatted icons correctly with right spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,6 +78,12 @@ input, select, textarea {
 		-webkit-transform: rotate(45deg);
 		font-size: 60px;
 		margin-top: 5px;
+		margin-left: -10px;
+}
+
+.dev-i-text{
+	font-size: 10px;
+	font-family: "Open Sans", Helvetica, sans-serif;
 }
 /* Basic */
 
@@ -2061,10 +2067,10 @@ input, select, textarea {
 			border: solid 2px #fff;
 			display: inline-block;
 			font-size: 1.35em;
-			height: calc(3em + 2px);
+			height: calc(3em + 20px);
 			line-height: 3em;
 			text-align: center;
-			width: calc(3em + 2px);
+			width: calc(3em + 20px);
 		}
 
 			.icon.major:before {
